[package]
name = "rafnir"
version = "0.1.0"
authors = ["ole_thoeb <eloemil@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
polymap = { path = "./polymap" }